# openapi-ocaml

./: .gitlab-ci.yml  CHANGES  LICENSE  README.md  dune-project  openapi-opium.opam  openapi.opam  ppx_deriving_json_schema.opam
lib/: app.ml  app.mli  dune  json_schema.ml  ppx_deriving_json_schema.ml  spec.ml
test/: dune  pp.ml  test.ml
