opam-version: "1.2"
name: "openapi"
version: "0.1"
maintainer: "J. Aaron Pendergrass <james.pendergrass@jhuapl.edu>"
authors: [ "J. Aaron Pendergrass <james.pendergrass@jhuapl.edu>" ]
license: "BSD-3-clause"
description: "OpenAPI type definitions and Opium wrapper"
synopsis:  "OpenAPI type definitions and Opium wrapper"
homepage: "https://gitlab.jhuapl.edu/sara/tools/openapi"
bug-reports: "https://gitlab.jhuapl.edu/sara/tools/openapi/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "core" { >= "v0.12.0"}
  "lwt" { >= "5.3.0"}
  "opium" {>= "0.16.0"}
  "ppx_deriving_yojson" {>= "3.0"}
  "sara_util" {>= "0.5"}
  "tyxml" {>= "4.4.0"}
  "yojson" {>= "1.7.0"}
  "dune" {build}
  "ppx_deriving" {build & >= "4.2"}
]
